--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <java.version>22</java.version>
 
         <rest-assured.verion>5.4.0</rest-assured.verion>
-        <testcontainer-postgres.version>1.19.7</testcontainer-postgres.version>
+        <testcontainers.version>1.19.7</testcontainers.version>
 
         <postgresql.version>42.7.3</postgresql.version>
         <liquibase.version>4.27.0</liquibase.version>
@@ -38,12 +38,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -65,6 +59,12 @@
         <!--        Tests-->
         <!--        -->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.verion}</version>
@@ -74,7 +74,20 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${testcontainer-postgres.version}</version>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
